[metadata]
name = stripdb-ziotom78
version = 0.1.0
author = Maurizio Tomasi
author_email = maurizio.tomasi@unimi.it
description = A SQLite3 database for LSPE/Strip data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lspestrip/stripdb
project_urls =
    Bug Tracker = https://github.com/lspestrip/stripdb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
